Prevent autozoom on iOS by increasing text size

--- a/src/interpreter/html/style.css
+++ b/src/interpreter/html/style.css
@@ -88,6 +88,7 @@ select {
   overflow: hidden;
   color: inherit;
   font-family: inherit;
+  font-size: 1em;
 }
 
 select:hover {
@@ -182,6 +183,11 @@ td:nth-child(2) {
   div#butterfly {
     position: sticky;
     top: 0;
+    padding: calc((4.5 * 100vw / 28 - 40px) / 2) 1em;
+  }
+
+  select {
+    font-size: 16px;
   }
 
   th {
